# tfrecord-fast

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
examples/: bench_writer.py  compile_protos.rs  pywrite.py  read.py
python/tfrecord_fast/: __init__.py  reader.py  writer.py
src/: constants.rs  error.rs  lib.rs  reader.rs  tensorflow.rs  writer.rs
src/utils/: crc32c.rs
