[package]
name = "tfrecord-fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tfrecord_fast"
crate-type = ["cdylib"]

[dependencies]
crc32c = "0.6.4"
numpy = "0.20.0"
prost = "0.12.3"
anyhow = { version = "1", features = ["backtrace"] }
pyo3 = { version = "0.20", features = ["anyhow"] }
thiserror = "1.0.50"
buffered-reader = "1.3.0"
fastrand = "2.0.1"
librscrc = { version = "0.1.0", features = ["all"] }

[dev-dependencies]
prost-build = "0.12.3"
