[project]
name = "tfrecord-fast"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SunDoge", email = "384813529@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=23.3.1",
]

[tool.maturin]
python-source = "python"
module-name = "tfrecord_fast._lowlevel"
features = ["pyo3/extension-module"]
