[project]
name = "tfrecord-fast"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SunDoge", email = "384813529@qq.com" }
]
dependencies = [
    "numpy>=1.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=23.3.1",
    "maturin>=1.4.0",
    "tfrecord>=1.14.4",
    "ipython>=8.12.3",
    "protobuf>=3.20,<3.21",
    "tqdm>=4.66.1",
]

[tool.maturin]
python-source = "python"
module-name = "tfrecord_fast._lowlevel"
features = ["pyo3/extension-module"]
